--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "middlewares/request-handler": "^0.3.0",
         "middlewares/utils": "^0.12.0",
         "middlewares/whoops": "^0.5.0",
+        "symfony/dependency-injection": "^3.3",
         "zendframework/zend-diactoros": "^1.6"
     },
     "require-dev": {
@@ -23,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "src/"
         }
     },
     "config": {
