--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "middlewares/request-handler": "^0.3.0",
         "middlewares/utils": "^0.12.0",
         "middlewares/whoops": "^0.5.0",
+        "symfony/config": "^3.3",
         "symfony/dependency-injection": "^3.3",
+        "symfony/yaml": "^3.3",
         "zendframework/zend-diactoros": "^1.6"
     },
     "require-dev": {
