--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "middlewares/whoops": "^0.5.0",
         "symfony/config": "^3.3",
         "symfony/dependency-injection": "^3.3",
+        "symfony/dotenv": "^3.3",
         "symfony/yaml": "^3.3",
         "zendframework/zend-diactoros": "^1.6"
     },
@@ -28,6 +29,11 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@php -r \"file_exists('.env') || copy('.env.dist', '.env');\""
+        ]
     },
     "config": {
         "preferred-install": {
