--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "zendframework/zend-diactoros": "^1.6"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.8",
         "symfony/var-dumper": "^3.3"
     },
     "autoload": {
@@ -34,7 +35,8 @@
     "scripts": {
         "post-install-cmd": [
             "@php -r \"file_exists('.env') || copy('.env.dist', '.env');\""
-        ]
+        ],
+        "cs-fix": "php-cs-fixer fix"
     },
     "config": {
         "preferred-install": {
